update css, fix spacing issues

--- a/themes/split/static/assets/css/split.css
+++ b/themes/split/static/assets/css/split.css
@@ -242,7 +242,7 @@ body.page-template-page-fullsingle-split p {
 }
 
 .split-intro .location {
-    margin-top: 40px; /* Ensures 40px spacing from the previous element */
+    margin-top: 30px; /* Ensures 40px spacing from the previous element */
   }
 
 .split-bio {
