--- a/themes/split/static/assets/sass/01-content.scss
+++ b/themes/split/static/assets/sass/01-content.scss
@@ -159,10 +159,10 @@ body.page-template-page-fullsingle-split {
     color: $color-tagline;
   }
   .emojis {
-    color: $color-tagline;
+    color: $color-emojis;
   }
   .location {
-    color: $color-tagline;
+    color: $color-location;
   }
 
 }
